# MasterProject

./: .gitignore  README.md
geant4/: README.md
geant4/analysis/: README.md  klg4_y_values.txt
geant4/analysis/beta_spectra/: 100Rh_beta.py  104m1Ag_beta.py  plotBetaSpectra.py
geant4/analysis/final_spectra/: plotFinalImage.py  plotFinalSpectra.py
geant4/analysis/hit_counts/: plotCalibratedHitCounts.py  plotHitCounts.py  store_calibration_factors.py  store_hit_info.py
geant4/analysis/real_spectra/: 122I_gamma.py  plotRealEnergies.py  (+2 more)
geant4/rdecay01_edit_1/: README.md  rdecay01.cc
geant4/rdecay01_edit_2/: CMakeLists.txt  README.md  rdecay01.cc
geant4/rdecay01_edit_3/: CMakeLists.txt  README.md  rdecay01.cc
geant4/rdecay01_edit_3/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PMT.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  TotalHitCounter.hh  TrackingAction.hh  TrackingMessenger.hh
geant4/rdecay01_edit_3/macros/electrons/: electron0.mac  electron025.mac  electron05.mac  electron075.mac  electron1.mac  electron125.mac  electron15.mac  electron175.mac  electron2.mac  electron2225.mac  electron225.mac  electron25.mac  electron275.mac  electron3.mac  electron325.mac  electron35.mac  electron375.mac  electron4.mac  electron425.mac  electron45.mac  electron475.mac  electron5.mac
geant4/rdecay01_edit_3/macros/gammas/: gamma0.mac  gamma025.mac  gamma05.mac  gamma075.mac  gamma1.mac  gamma125.mac  gamma15.mac  gamma175.mac  gamma2.mac  gamma2225.mac  gamma225.mac  gamma25.mac  gamma275.mac  gamma3.mac  gamma325.mac  gamma35.mac  gamma375.mac  gamma4.mac  gamma425.mac  gamma45.mac  gamma475.mac  gamma5.mac
geant4/rdecay01_edit_3/macros/positrons/: positron0.mac  positron025.mac  positron05.mac  positron075.mac  positron1.mac  positron125.mac  positron15.mac  positron175.mac  positron2.mac  positron2225.mac  positron225.mac  positron25.mac  positron275.mac  positron3.mac  positron325.mac  positron35.mac  positron375.mac  positron4.mac  positron425.mac  positron45.mac  positron475.mac  positron5.mac
geant4/rdecay01_edit_3/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PMT.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TotalHitCounter.cc  TrackingAction.cc
kamland-data/: README.md  vetoes_spectrum.py
kamland-data/LL_vetoes/: LLV_notebook.ipynb
kamland-data/compare_datasets/: Evis_datasets.py  energy_bins_notebook.ipynb
(+96 files in other folders)
